Removed backend logout endpoint
